# PanoraKit

./: .clang-format  .editorconfig  .gitignore  PRIVACY_POLICY.md  README.md  build.gradle.kts  gradle.properties  gradlew  kernel.properties  local.properties.example  settings.gradle.kts  signing.properties.example  startup-gate.local.properties.example
.github/kernel-state/: alpha.txt  meta.txt  smart.txt
.github/workflows/: Preview.yml  build-smart.yml  build.yml  check-automatically.yml  check-kernel-manually.yml  check-manually.yml  ci.yml  dependency.yml  kernel-daily-check.yml  regression-instrumentation.yml  release-build.yml  release-manual.yml  reusable-build-native.yml
app/: AndroidManifest.xml  build.gradle.kts  gradle.lockfile  lint-baseline.xml  proguard-rules.pro
app/assets/: override.json
app/src/: App.kt  MainActivity.kt  ProxySheetActivity.kt  WebViewActivity.kt
build-logic/convention/: build.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
common/: build.gradle.kts
config/: kernel.properties  ui-capability-registry.txt
core/: build.gradle.kts  consumer-rules.pro
data/log/: build.gradle.kts
data/proxy/: build.gradle.kts
data/settings/: build.gradle.kts
di/: build.gradle.kts
docs/: CONTRIBUTING.md  CONTRIBUTING_ZH_HANS.md  DEVELOP.md  DEVELOP_ZH_HANS.md  LICENSING.md  LICENSING_ZH_HANS.md  PERFORMANCE.md  PERFORMANCE_ZH_HANS.md  POWER_ANALYSIS_ZH_HANS.md  PRIVACY_POLICY.md  PRIVACY_POLICY_ZH_HANS.md  PRIVACY_ZH_HANS.md  README.md  README_ZH_HANS.md  SPEC.md  SPEC_ZH_HANS.md  ThirdParty.md  ThirdParty_ZH_HANS.md
docs/guide/: events-and-components.md  getting-started.md  using-language.md
extension/: AndroidManifest.xml  build.gradle.kts
feature/editor/: build.gradle.kts
feature/meta/: build.gradle.kts
feature/override/: build.gradle.kts
feature/proxy/: build.gradle.kts
feature/substore/: AndroidManifest.xml  build.gradle.kts
feature/update/: build.gradle.kts
feature/web/: build.gradle.kts
gradle/: libs.versions.toml  modernization-baseline.gradle.kts  ui-contract-validation.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
jniLibs/: .gitignore
lib/mihomo/: go.mod  go.sum
lib/native/cpp/: CMakeLists.txt  bridge_helper.cpp  bridge_helper.h  jni_bridge.hpp  jni_error.hpp  jni_helper.cpp  jni_helper.h  jni_raii.cpp  jni_raii.hpp  main.cpp  version.h  version.h.in
lib/native/rust/: Cargo.toml
lib/native/rust/src/: lib.rs
locale/: build.gradle.kts
modules/core/: build.gradle.kts  (+2 more)
platform/: build.gradle.kts
scripts/: llm-runtime-fuzz.ps1  llm-runtime-fuzz.sh  native-build.main.kts  preview-bot.py  remove-comments.main.kts  repo-health.ps1  repo-health.sh  setup-release-signing.ps1  setup-release-signing.sh  sync-kernel.bat  sync-kernel.ps1  sync-kernel.sh
ui/: build.gradle.kts
website/: docs.json  index.mdx
(+1892 files in other folders)
